--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack -p 3075",
-    "build": "node ./scripts/gen-rss.js && next build --webpack",
+    "build": "pnpm exec node ./scripts/gen-rss.js && next build --webpack",
     "start": "next start"
   },
   "dependencies": {
