--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.8",
+    "framer-motion": "^11.0.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.400.0",
     "next": "latest",
     "nextra": "^2.0.0-beta.5",
     "nextra-theme-blog": "^2.0.0-beta.5",
