--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.400.0",
     "next": "latest",
-    "nextra": "^2.0.0-beta.5",
-    "nextra-theme-blog": "^2.0.0-beta.5",
+    "nextra": "^2.13.4",
+    "nextra-theme-blog": "^2.13.4",
     "react": "^18.2.0",
     "react-clock": "^6.0.0",
     "react-dom": "^18.2.0",
