--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.1.1",
     "@radix-ui/react-tooltip": "^1.2.8",
     "framer-motion": "^11.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.400.0",
     "next": "latest",
-    "nextra": "^2.13.4",
-    "nextra-theme-blog": "^2.13.4",
     "react": "^18.2.0",
     "react-clock": "^6.0.0",
     "react-dom": "^18.2.0",
