--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@vanilla-extract/next-plugin": "^2.4.17",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "3.4.0",
     "typescript": "^5.9.3"
   }
 }
