--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "framer-motion": "^11.0.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.400.0",
     "motion": "^12.23.26",
     "next": "latest",
     "react": "^18.2.0",
     "react-clock": "^6.0.0",
     "react-dom": "^18.2.0",
+    "rehype-highlight": "^7.0.2",
     "rss": "^1.2.2"
   },
   "devDependencies": {
