Integrate rehype-pretty-code for enhanced code styling and update retroMarkdownStyles: replace rehype-highlight with rehype-pretty-code in next.config.js, update styles for code blocks and inline code, and add new post details to feed.xml while adjusting lastBuildDate.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-clock": "^6.0.0",
     "react-dom": "^18.2.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-pretty-code": "^0.13.1",
     "rss": "^1.2.2"
   },
   "devDependencies": {
