--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "^18.2.0",
     "react-clock": "^6.0.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
     "rehype-pretty-code": "^0.13.1",
+    "remark-gfm": "^4.0.1",
     "rss": "^1.2.2"
   },
   "devDependencies": {
